# AdventOfCode2025

./: README.md
CPP/AdventOfCode2025/: CMakeLists.txt
CPP/AdventOfCode2025/day01/: day01.cpp
CPP/AdventOfCode2025/day02/: day02.cpp
CPP/AdventOfCode2025/day03/: day03.cpp
CPP/AdventOfCode2025/day04/: day04.cpp
CPP/AdventOfCode2025/day05/: day05.cpp
CPP/AdventOfCode2025/day06/: day06.cpp
CPP/AdventOfCode2025/utils/: utils.cpp  utils.h
Kotlin/AdventOfCode2025/: settings.gradle.kts
Kotlin/AdventOfCode2025/gradle/wrapper/: gradle-wrapper.properties
Kotlin/AdventOfCode2025/src/main/kotlin/: Util.kt
Kotlin/AdventOfCode2025/src/main/kotlin/day01/: Day01.kt
